--- a/sandbox/modeling_nb.ipynb
+++ b/sandbox/modeling_nb.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import cross_val_score, train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "%matplotlib inline"
